# nontetris

./: .gitignore  CMakeLists.txt  FindBOX2D.cmake  Makefile  NontetrisConfig.h.in  README  README.md  TODO  duettogl.cpp  duettogl.h  emscriptenbuild.sh  fileloader.cpp  fileloader.h  graphichandler.cpp  graphichandler.cpp.blueworking  graphichandler.cpp.test  graphichandler.h  inputhandler.cpp  inputhandler.h  minimizecheerpjs.sh  minimizeduettojs.sh  minimizejs.sh  nontetris.cpp  physichandler.cpp  physichandler.h  piece.h  piececreator.js  polygon.h  shader.frag  shader.vert  shaderglobal.frag  shaderglobal.vert  texloader.h  timemanager.h  webbuild.sh  wshader.frag  wshader.vert
Box2D/: CMakeLists.txt
Box2D/Box2D/Collision/: b2CollideCircle.cpp  b2CollideEdge.cpp  b2Distance.cpp  b2DynamicTree.cpp  b2DynamicTree.h
Box2D/Box2D/Collision/Shapes/: b2ChainShape.cpp  b2EdgeShape.cpp
Box2D/Box2D/Common/: b2BlockAllocator.h  b2Math.h  b2Settings.cpp  b2Settings.h  b2StackAllocator.h
Box2D/Box2D/Dynamics/: b2Body.cpp  b2Fixture.cpp  b2Island.cpp  b2World.cpp
Box2D/Box2D/Dynamics/Contacts/: b2ChainAndCircleContact.cpp  b2ChainAndPolygonContact.cpp  b2Contact.cpp  b2Contact.h  b2PolygonContact.cpp
Box2D/Box2D/Dynamics/Joints/: b2Joint.cpp
SOIL/: SOIL.c
src/: CMakeLists.txt  NontetrisConfig.h.in  convexer.h  cutter.h  duettogl.cpp  duettogl.h  fileloader.h  gamehandler.cpp  gamehandler.h  gameoptions.h  glwrapper.h  graphichandler.cpp  graphichandler.h  graphictoinput.h  inputhandler.cpp  inputhandler.h  joystickhandler.cpp  joystickhandler.h  main_cheerp.cpp  main_duetto.cpp  main_emscripten.cpp  main_pc.cpp  myutil.h  nontetris.cpp  physichandler.cpp  physichandler.h  piece.h  polygon.h  shader.frag  shader.vert  shadercomp.frag  shaderident.vert  texloader.h  texthandler.cpp  texthandler.h  timemanager.h
srclib/: CMakeLists.txt  README
srclib/Box2D/Box2D/Collision/: b2CollideCircle.cpp  b2CollideEdge.cpp  b2Collision.cpp  b2Collision.h  b2Distance.cpp  b2DynamicTree.cpp  b2DynamicTree.h
srclib/Box2D/Box2D/Collision/Shapes/: b2ChainShape.cpp  b2ChainShape.h  b2CircleShape.cpp  b2EdgeShape.cpp  b2PolygonShape.cpp
srclib/Box2D/Box2D/Common/: b2BlockAllocator.cpp  b2BlockAllocator.h  b2Math.h  b2Settings.cpp  b2Settings.h  b2StackAllocator.cpp  b2StackAllocator.h  b2StackAllocatorTypesCheerp.h  b2StackAllocatorTypesDuetto.h
srclib/Box2D/Box2D/Dynamics/: b2Body.cpp  b2Fixture.cpp  b2Island.cpp  b2World.cpp
srclib/Box2D/Box2D/Dynamics/Contacts/: b2ChainAndCircleContact.cpp  b2ChainAndPolygonContact.cpp  b2CircleContact.cpp  b2Contact.cpp  b2Contact.h  b2ContactSolver.cpp  b2ContactSolver.h  b2EdgeAndCircleContact.cpp  b2EdgeAndPolygonContact.cpp  b2PolygonAndCircleContact.cpp  b2PolygonContact.cpp
srclib/Box2D/Box2D/Dynamics/Joints/: b2Joint.cpp
srclib/lodepng/: CMakeLists.txt
test/: Makefile  test_plot.py  testaligned.cpp  testconvexer.cpp  testconvexercheerp.cpp  testconvexerduetto.cpp  testcutter.cpp  testcutter_plot.py  testdistsegment.cpp
www/: duetto.js  emscriptenwrapper.js  index.html  info.html  libnontetris.js  nontetris-cheerp.js  nontetris-emscripten.data  nontetris-emscripten.js  nontetris.js  shader.frag  shader.vert  shadercomp.frag  shaderglobal.frag  shaderglobal.vert  shaderident.vert  thanks.html  webgl-util.js
