###BOX2D INCLUSION
set (BOX2D_INSTALL OFF)
set (BOX2D_INSTALL_DOC OFF)
IF(NOT DEFINED EMSCRIPTEN)
	set (BOX2D_BUILD_SHARED OFF)
	set (BOX2D_BUILD_STATIC ON)
ELSE(NOT DEFINED EMSCRIPTEN)
	set (BOX2D_BUILD_SHARED ON)
	set (BOX2D_BUILD_STATIC OFF)
ENDIF(NOT DEFINED EMSCRIPTEN)
set (BOX2D_BUILD_EXAMPLES OFF)

add_subdirectory (Box2D)
###END BOX2D INCLUSION

if(NOT DEFINED DUETTO)
	add_subdirectory(lodepng)
endif(NOT DEFINED DUETTO)
